--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel</title>
+    <!-- the line of code bellow is for the favicon (the icon in the browser tab) -->
+    <!-- to-do: find or create an icon for the hotel favicon -->
+    <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> --> 
 </head>
 <body>
     
