added css for the header
the other stuff is in index.html, but it can later be moved into the other file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <!-- the line of code bellow is for the favicon (the icon in the browser tab) -->
     <!-- to-do: find or create an icon for the hotel favicon -->
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> --> 
+    <link rel="stylesheet" href="./public/style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <a href="#"><img class="logo-header" src="./public/logo2.png"></a>
+        <div class="right-side-header">
+            <button id="toggle-high-contrast">High Contrast Mode</button>
+            <a class="login-page-button" href="#">Login</a>
+        </div>
+    </div>
 </body>
 </html>
