added a picture with a button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
             <a class="login-page-button" href="#">Login</a>
         </div>
     </div>
-
+    
     <!-- page content -->
-    <h1 style="height: 100 px;">page content</h1>
+    <div class="home-page">
+        <h1 style="height: 100 px; margin: 30px;">Tagline ideas <br>
+        Every Day is a Sunny Stay<br>
+        Sunny Stay Every Day<br>
+        Sunny Day Your Way</h1>
+
+        <div class="picture-with-button">
+        <div class="cool-picture"><img class="cool-picture" src="./public/coolpicture3.png"></div>
+        <div class="white-overlay"></div>
+        <!-- <button class="fill-up-booking-form-button" href="#">Sign Up</button> -->
+        <a class="fill-up-booking-form-button" href="#">Sign Up</button>
+        </div>
+    </div>
 
     <!-- footer -->
     <div class="footer">
