created public2 folder for all the html files created by me
so that they don't override the files that are already there

--- a/public2/signup.html
+++ b/public2/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel</title>
     <link rel="icon" type="image/x-icon" href="./public/images/favicon.png"> 
-    <link rel="stylesheet" href="./public/style.css">
+    <link rel="stylesheet" href="../public/style.css">
 </head>
 <body>
     <!-- header -->
@@ -22,7 +22,7 @@
     
     <!-- page content -->
     <div class="login-page-container">
-        <div class="sign-in-text">Sign in your account</div>
+        <div class="sign-in-text">Create a new account</div>
         <div class="login-container">
             <div class="fields">
                 <input class="email field" id="email" placeholder="Email address" type="email" value="" title="">
@@ -30,8 +30,8 @@
                 <button class="continue-button" type="submit">Continue</button>
             </div>
         </div>
-        <div class="no-account">Don't have an account?</div>
-        <button class="continue-button" type="submit">Sign up</button>
+        <div class="no-account">Already have an account?</div>
+        <button class="continue-button" type="submit">Sign in</button>
     </div>
     
 
