--- a/public2/login.html
+++ b/public2/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel</title>
-    <link rel="icon" type="image/x-icon" href="./public/images/favicon.png"> 
-    <link rel="stylesheet" href="./public/style.css">
+    <link rel="icon" type="image/x-icon" href="../public/images/favicon.png"> 
+    <link rel="stylesheet" href="../public/style.css">
 </head>
 <body>
     <!-- header -->
     <header>
     <div class="header">
-        <a aria-label="SynnySideSuncastle logo" href="/"><img class="logo-header-footer" src="./public/images/logo2.png"></a>
+        <a aria-label="SynnySideSuncastle logo" href="/"><img class="logo-header-footer" src="../public/images/logo2.png"></a>
         <div class="right-side-header">
             <button id="toggle-high-contrast">High Contrast Mode</button>
             <a class="login-page-button" href="#">Login</a>
@@ -22,7 +22,7 @@
     
     <!-- page content -->
     <div class="login-page-container">
-        <div class="sign-in-text">Create a new account</div>
+        <div class="sign-in-text">Sign in your account</div>
         <div class="login-container">
             <div class="fields">
                 <input class="email field" id="email" placeholder="Email address" type="email" value="" title="">
@@ -30,15 +30,15 @@
                 <button class="continue-button" type="submit">Continue</button>
             </div>
         </div>
-        <div class="no-account">Already have an account?</div>
-        <button class="continue-button" type="submit">Sign in</button>
+        <div class="no-account">Don't have an account?</div>
+        <button class="continue-button" type="submit">Sign up</button>
     </div>
     
 
     <!-- footer -->
     <footer>
         <div class="footer">
-            <div class="flex-gap-1 flex-gap"><a aria-label="SunnySideSuncastle logo" href="/"><img class="logo-header-footer" src="./public/images/logo2.png"></a></div>
+            <div class="flex-gap-1 flex-gap"><a aria-label="SunnySideSuncastle logo" href="/"><img class="logo-header-footer" src="../public/images/logo2.png"></a></div>
             <div class="flex-gap-2 flex-gap">
                 <div class="info-text">About SSS</div>
                 <div><a class="about-us-page-button" href="#">About Us</a></div>
