--- a/public2/signup.html
+++ b/public2/signup.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel</title>
-    <link rel="icon" type="image/x-icon" href="./public/images/favicon.png"> 
+    <link rel="icon" type="image/x-icon" href="../public/images/favicon.png"> 
     <link rel="stylesheet" href="../public/style.css">
 </head>
 <body>
     <!-- header -->
     <header>
     <div class="header">
-        <a aria-label="SynnySideSuncastle logo" href="/"><img class="logo-header-footer" src="./public/images/logo2.png"></a>
+        <a aria-label="SynnySideSuncastle logo" href="/"><img class="logo-header-footer" src="../public/images/logo2.png"></a>
         <div class="right-side-header">
             <button id="toggle-high-contrast">High Contrast Mode</button>
             <a class="login-page-button" href="#">Login</a>
@@ -38,7 +38,7 @@
     <!-- footer -->
     <footer>
         <div class="footer">
-            <div class="flex-gap-1 flex-gap"><a aria-label="SunnySideSuncastle logo" href="/"><img class="logo-header-footer" src="./public/images/logo2.png"></a></div>
+            <div class="flex-gap-1 flex-gap"><a aria-label="SunnySideSuncastle logo" href="/"><img class="logo-header-footer" src="../public/images/logo2.png"></a></div>
             <div class="flex-gap-2 flex-gap">
                 <div class="info-text">About SSS</div>
                 <div><a class="about-us-page-button" href="#">About Us</a></div>
