--- a/public2/admin-profile.html
+++ b/public2/admin-profile.html
@@ -24,7 +24,7 @@
     <div class="admin-page-container">
         <div class="sign-in-text">You can change your information and user information here</div>
         <br>
-        <div class="sign-in-text">Your data:</div>
+        <div class="sign-in-text">Your information:</div>
         <div class="admin-container">
             <div class="fields">
                 <input class="email field" id="email" placeholder="Email address" type="email" value="" title="">
@@ -34,9 +34,12 @@
         <button class="continue-button" type="submit">Save My information</button>
         <br>
         <br>
-        <div class="sign-in-text">User data:</div>
+        <div class="sign-in-text">User information:</div>
         <br>
-        <!-- R from CRUD should be here -->
+        <!-- Read from CRUD should be here -->
+        <!-- first, we can have just basic user information here: first name, last name, phone, email, dates -->
+        <!-- but if we have time, we can make it so that the page shows the room reservations and it has a button to edit the reservations 
+        and it has all the user data -->
 
         <button class="continue-button" type="submit">Save User information</button>
     </div>
