--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sunny Side SandCastle</title>
+    <link rel="icon" type="image/x-icon" href="../public/images/favicon.png"> 
+    <link rel="stylesheet" href="../public/style.css">
   </head>
   <body></body>
 </html>
